# leohack1

./: README  port_finder.py  pyproject.toml  remote_control.py  robot_control.py  seeer.py  ultrasonic_test.py
CAD/: Interface Panel.STEP
arduino/ESP32_CAM_Fixed/: ESP32_CAM_Fixed.ino
arduino/esp32_webcam_server_online1/: esp32_webcam_server_online1.ino
arduino/onboard_receiver/: onboard_receiver.ino
arduino/onboard_receiver_serial/: motor_control.cpp  motor_control.h  onboard_receiver_serial.ino  student_functions.cpp  student_functions.h
arduino/ultrasonic_test/: ultrasonic_test.ino
onboard_receiver/: motor_control.cpp  motor_control.h  onboard_receiver.ino  student_functions.cpp  student_functions.h
server/: browser_capture.py  qr_code_detector.py  receiver.py  receiver_flask.py
utilities/: onboard_motor_test.ino
vision/: opencv_test.py  spyer.py  video_detector.py
